# 2dplatformer-V1

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  PLATFORMER_GUIDE.md  README.md
src/: Camera.h  Game.cpp  Game.h  Input.cpp  Input.h  Level.cpp  Level.h  Player.cpp  Player.h  main.cpp
